--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue-3": "^0.5.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "fullcalendar": "^6.1.9",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "jquery": "^3.7.1",
+    "morgan": "~1.9.1",
+    "vue": "^3.3.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
