--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jquery": "^3.7.1",
+    "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
     "vue": "^3.3.8"
   },
