--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-vue-3": "^0.5.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.9",
     "express": "~4.16.1",
     "fullcalendar": "^6.1.9",
     "http-errors": "~1.6.3",
