--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "bootstrap-vue-3": "^0.5.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "fullcalendar": "^6.1.9",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
     "vue": "^3.3.8"
