--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
+    "mdb-ui-kit": "^7.1.0",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
     "vue": "^3.3.8"
